examples/illformed/redeclaration.zn
func main() {
    let a: i32 = 10;
    let a: i32 = 20; // Error: redeclaration of 'a' in same scope
}
